--- a/plugin.xml
+++ b/plugin.xml
@@ -19,7 +19,7 @@
 
   <!-- android -->
   <platform name="android">
-    <preference name="playerToken" />
+    <variable name="playerToken" />
     <config-file parent="/resources" target="res/values/themes.xml">
       <style name="Theme.App.Player" parent="Theme.AppCompat.Light.NoActionBar">
       </style>
